[package]
name = "itoa"
version = "0.4.8" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
rust-version = "1.36"
license = "MIT OR Apache-2.0"
description = "Fast functions for printing integer primitives to an io::Write"
repository = "https://github.com/dtolnay/itoa"
documentation = "https://docs.rs/itoa"
categories = ["value-formatting"]
readme = "README.md"
exclude = ["performance.png"]
edition = "2018"

[features]
default = ["std"]
std = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
