[package]
name = "itoa"
version = "1.0.2" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["value-formatting"]
description = "Fast integer primitive to string conversion"
documentation = "https://docs.rs/itoa"
edition = "2018"
exclude = ["performance.png", "chart/**"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dtolnay/itoa"
rust-version = "1.36"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
