[package]
name = "itoa-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
itoa = { path = ".." }
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }

[[bin]]
name = "fuzz_itoa"
path = "fuzz_targets/fuzz_itoa.rs"
test = false
doc = false

[workspace]
