[package]
name = "itoa-fuzz"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
itoa = { path = ".." }
libfuzzer-sys = "0.4"

[[bin]]
name = "fuzz_itoa"
path = "fuzz_targets/fuzz_itoa.rs"
test = false
doc = false

[workspace]
